--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 # Production Environment Variables
 # API base URL for production (Chrome extension production mode)
-VITE_API_BASE_URL=http://localhost:3000
+VITE_API_BASE_URL=http://api.ninechaps.com
